# flox-debugger

./: Cargo.toml  README.md  dbg.fish  dbg.sh  dbg.zsh  instructions.md  other.bash  other.zsh  run.fish  run.sh  run.zsh
.flox/: env.json
.flox/env/: manifest.toml
src/: app.rs  main.rs  ui.rs
src/app/: key_bindings.rs  mod.rs  theme.rs  trace.rs  vars.rs
src/cli/: mod.rs
src/ui/: home.rs  mod.rs  output.rs  trace.rs  vars.rs
