[package]
name = "flox-debugger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
env_logger = { version = "0.11.8", features = ["kv"] }
log = { version = "0.4.27", features = ["kv"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
ratatui_input = "0.1.3"
